--- a/index.html
+++ b/index.html
@@ -2,28 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Cypher Tech Solutions | Home</title>
+<title>Cypher Tech Solutions</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Web development, cybersecurity, graphics, analytics & digital solutions for growing businesses.">
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
 <!-- Floating WhatsApp & Phone -->
-<a href="https://wa.me/447915606500" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i></a>
+<a href="https://wa.me/447915606500" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
 <a href="tel:07915606500" class="phone-btn"><i class="fas fa-phone"></i></a>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background:#0B1C2D;">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html">
-      <img src="assets/images/logo.png" alt="Cypher Tech Solutions" height="50">
-    </a>
+    <a class="navbar-brand fw-bold" href="index.html"><img src="assets/images/logo.png" height="45" alt="Logo"></a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -31,95 +26,26 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="btn btn-primary ms-2" href="contact.html">Get a Quote</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <!-- Hero Section -->
-<section class="hero d-flex align-items-start justify-content-center text-center">
+<section class="hero-home">
   <div class="hero-overlay"></div>
-  <div class="container hero-content" data-aos="fade-down">
-    <h1 class="display-3 fw-bold text-white mb-3">Smart Digital Solutions</h1>
-    <p class="lead slogan mb-4">Web Development, Cybersecurity, Graphics, Analytics & Social Media Management</p>
-    <div class="d-flex justify-content-center flex-wrap">
-      <a href="contact.html" class="btn btn-start btn-lg me-2 mb-2">Start a Conversation</a>
-      <a href="tel:07915606500" class="btn btn-call btn-lg mb-2">Call Now</a>
-    </div>
+  <div class="hero-center text-center">
+    <h1 class="hero-title">We help your brand grow online</h1>
+    <p class="hero-slogan">Cyber Services • Web Development • Graphics Design • Video Editing</p>
+    <a href="portfolio.html" class="btn btn-electric me-2">View Our Work</a>
+    <a href="contact.html" class="btn btn-teal">Contact Us</a>
   </div>
 </section>
-
-<!-- Services Preview -->
-<section id="services" class="section bg-light">
-  <div class="container">
-    <h2 class="text-center mb-5">Our Services</h2>
-    <div class="row g-4 justify-content-center">
-      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
-        <div class="service-card text-center">
-          <i class="fas fa-code mb-3"></i>
-          <h5>Web Development</h5>
-          <p>High-performance, secure websites optimized for small businesses.</p>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
-        <div class="service-card text-center">
-          <i class="fas fa-shield-halved mb-3"></i>
-          <h5>Cyber Services</h5>
-          <p>Security audits, protection, and recovery planning for your systems.</p>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
-        <div class="service-card text-center">
-          <i class="fas fa-palette mb-3"></i>
-          <h5>Graphics Design</h5>
-          <p>Branding, marketing posters, and social media visuals that stand out.</p>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
-        <div class="service-card text-center">
-          <i class="fas fa-chart-line mb-3"></i>
-          <h5>Data Analytics</h5>
-          <p>Actionable insights for smarter business decisions and growth.</p>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
-        <div class="service-card text-center">
-          <i class="fas fa-hashtag mb-3"></i>
-          <h5>Social Media Management</h5>
-          <p>Strategic content planning and engagement to grow your online presence.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Projects -->
-<section id="work" class="section">
-  <div class="container">
-    <h2 class="text-center mb-5">Our Work</h2>
-    <div class="row g-4 justify-content-center">
-      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/web-project.jpg" class="img-fluid rounded shadow"></div>
-      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/design-sample.jpg" class="img-fluid rounded shadow"></div>
-      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/analytics.jpg" class="img-fluid rounded shadow"></div>
-    </div>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="footer text-white mt-5">
-  <div class="container text-center">
-    <p>© 2026 Cypher Tech Solutions | 
-      <a href="mailto:andrewmpeter201@gmail.com" class="text-white">Email</a> | 
-      <a href="tel:07915606500" class="text-white">Phone</a> | 
-      <a href="about.html" class="text-white">About Us</a>
-    </p>
-  </div>
-</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="assets/js/main.js"></script>
 </body>
 </html>
