--- a/services.html
+++ b/services.html
@@ -3,44 +3,61 @@
 <head>
 <meta charset="UTF-8">
 <title>Services | Cypher Tech Solutions</title>
-<link rel="stylesheet" href="assets/css/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-<nav class="navbar navbar-dark" style="background:#0B1C2D;">
-  <div class="container"><a href="index.html"><img src="assets/images/logo.png" height="45"></a></div>
+<body style="background: url('assets/images/bg2.jpg') center/cover no-repeat;">
+
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background:#0B1C2D;">
+  <div class="container">
+    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" height="50" alt="Logo"></a>
+    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="nav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 
-<section class="section bg-light">
+<section class="section py-5">
   <div class="container">
-    <h2 class="text-center mb-5">Our Services</h2>
-    <div class="row g-4">
-      <div class="col-md-3">
-        <div class="service-card"><i class="fas fa-shield-halved fa-2x mb-2"></i>
-          <h5>Cyber Services</h5>
-          <p>Security audits, online protection, system recovery.</p>
-        </div>
+    <h2 class="text-center mb-5 text-white">Our Services</h2>
+    <div class="row g-4" id="services-cards">
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-shield-halved fa-2x"></i>
+        <h5>Cyber Services</h5>
+        <p>Security audits, protection, and recovery for your systems.</p>
       </div>
-      <div class="col-md-3">
-        <div class="service-card"><i class="fas fa-laptop-code fa-2x mb-2"></i>
-          <h5>Web Development</h5>
-          <p>Business websites, portfolios, hosting & maintenance.</p>
-        </div>
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-code fa-2x"></i>
+        <h5>Web Development</h5>
+        <p>High-performance websites for small and medium businesses.</p>
       </div>
-      <div class="col-md-3">
-        <div class="service-card"><i class="fas fa-palette fa-2x mb-2"></i>
-          <h5>Graphics Design</h5>
-          <p>Logos, posters, social media visuals.</p>
-        </div>
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-palette fa-2x"></i>
+        <h5>Graphics Design</h5>
+        <p>Logos, posters, and social media designs.</p>
       </div>
-      <div class="col-md-3">
-        <div class="service-card"><i class="fas fa-video fa-2x mb-2"></i>
-          <h5>Video Editing</h5>
-          <p>YouTube ads, reels, promos.</p>
-        </div>
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-video fa-2x"></i>
+        <h5>Video Editing</h5>
+        <p>Ads, YouTube videos, and promotional reels.</p>
       </div>
     </div>
   </div>
 </section>
+
+<script src="assets/js/servicesSlider.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
