--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
 <meta charset="UTF-8">
 <title>Cypher Tech Solutions | Home</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Web development, cybersecurity, graphics, analytics & digital solutions for growing businesses.">
+
+<!-- Bootstrap & Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+
+<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
+<!-- Custom CSS -->
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
 <!-- Floating WhatsApp & Phone -->
-<a href="https://wa.me/447915606500" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
+<a href="https://wa.me/447915606500" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i></a>
 <a href="tel:07915606500" class="phone-btn"><i class="fas fa-phone"></i></a>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background:#0B1C2D;">
   <div class="container">
     <a class="navbar-brand" href="index.html">
       <img src="assets/images/logo.png" height="60" alt="Cypher Tech Solutions">
@@ -45,12 +52,71 @@
   <div class="hero-content text-center">
     <h1 class="hero-title">We Help Your Brand Grow Online</h1>
     <p class="hero-slogan">Cyber Services · Web Development · Graphics · Video Editing</p>
-    <a href="portfolio.html" class="btn btn-electric me-2">View Our Work</a>
-    <a href="contact.html" class="btn btn-teal">Contact Us</a>
+    <a href="contact.html" class="btn btn-orange btn-lg me-3">Start Conversation</a>
+    <a href="contact.html" class="btn btn-teal btn-lg">Contact Us</a>
   </div>
 </section>
 
-<script src="assets/js/heroSlider.js"></script>
+<!-- Services Preview -->
+<section id="services" class="section bg-light py-5">
+  <div class="container">
+    <h2 class="text-center mb-5">Our Services</h2>
+    <div class="row g-4" id="services-cards">
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-shield-halved fa-2x"></i>
+        <h5>Cyber Services</h5>
+        <p>Security audits, protection, and recovery planning for your systems.</p>
+      </div>
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-code fa-2x"></i>
+        <h5>Web Development</h5>
+        <p>High-performance, secure websites optimized for small businesses.</p>
+      </div>
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-palette fa-2x"></i>
+        <h5>Graphics Design</h5>
+        <p>Branding, marketing posters, and social media visuals that stand out.</p>
+      </div>
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-chart-line fa-2x"></i>
+        <h5>Data Analytics</h5>
+        <p>Actionable insights for smarter business decisions and growth.</p>
+      </div>
+      <div class="col-md-4 service-card slide-card">
+        <i class="fas fa-hashtag fa-2x"></i>
+        <h5>Social Media Management</h5>
+        <p>Strategic content planning and engagement to grow your online presence.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Portfolio Preview -->
+<section id="portfolio" class="section py-5">
+  <div class="container">
+    <h2 class="text-center mb-5">Our Work</h2>
+    <div class="row g-4">
+      <div class="col-md-4"><img src="assets/images/web-project.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-md-4"><img src="assets/images/design-sample.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-md-4"><img src="assets/images/analytics.jpg" class="img-fluid rounded shadow"></div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="footer text-white mt-5" style="background:#0B1C2D;">
+  <div class="container text-center py-3">
+    <p>© 2026 Cypher Tech Solutions | 
+      <a href="mailto:andrewmpeter201@gmail.com" class="text-white">Email</a> | 
+      <a href="tel:07915606500" class="text-white">Phone</a> | 
+      <a href="about.html" class="text-white">About Us</a>
+    </p>
+  </div>
+</footer>
+
+<!-- JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/heroSlider.js"></script>
+<script src="assets/js/servicesSlider.js"></script>
 </body>
 </html>
